/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.adservices.service.proto.config_delivery;

import "google/protobuf/any.proto";
import "packages/modules/AdServices/adservices/service-core/proto/config-delivery/configuration_type.proto";

option java_multiple_files = true;

message Configuration {
  // Privacy Sandbox Configuration type.
  ConfigurationType configuration_type = 1;

  // List of Privacy Sandbox configuration records.
  repeated ConfigurationRecord configuration_records = 2;
}

message ConfigurationRecord {
  // Unique ID of this record within this configuration type (to identify this
  // record).
  string id = 1;

  // A set of labels to tag this record for later queries.
  repeated string labels = 2;

  // Configuration record payload.
  .google.protobuf.Any value = 3;
}
