/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.adservices.service.proto.config_delivery;

option java_multiple_files = true;

/** Each configuration sent through the config delivery service should have its
 * own configuration type entry specified here.
 *
 * This is to make it easier to isolate, update and retrieve the configurations.
 *
 * In the server, config proto binaries sent through the config delivery
 * service will have this type specified.
 *
 * In the client, config delivery system will store this type along with
 * the config entries.
 *
 * Important note: If a existing configuration type is no longer used,
 * don't delete it. Instead, mark it as deprecated. This is to ensure the
 * config type enum int value in the client, server and older clients are in sync.
 */
enum ConfigurationType {
  // Standard type when unspecified.
  TYPE_UNSPECIFIED = 0;
  // Type for Rb enrollment configurations list.
  TYPE_RB_ENROLLMENT = 1;
}
